--- a/hmsc-hpc-lumi-g-base/Makefile
+++ b/hmsc-hpc-lumi-g-base/Makefile
@@ -6,7 +6,7 @@ TENSORFLOW_PROBABILITY_VERSION=0.24.0  # use version matching with TF version, s
 MAGMA_VERSION=2.8.0
 
 IMAGE=hmsc-hpc-lumi-g-base
-IMAGE_VERSION=0.2.0
+IMAGE_VERSION=0.3.0-beta.1
 
 SIF_FILE=$(IMAGE_NAME)_$(IMAGE_VERSION).sif
 TAR_FILE=$(IMAGE_NAME)_$(IMAGE_VERSION).tar
